--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,4 @@ script:
   - sudo ./install_softwares.sh
   - sudo ./install_softwares.sh "on_docker"
   - sudo ./setup_bashrc.sh
+  - ./detect_os.sh
