Update setup_bashrc.sh Remove install_docker_on_ubuntu.sh Install docker using official docker install script Update travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: bash
 script:
-  - sudo ./install_softwares.sh
-  - sudo ./install_softwares.sh "on_docker"
-  - sudo ./setup_bashrc.sh
+  - sudo ./init.sh
+  - sudo ./init.sh "on_docker"
   - ./detect_os.sh
